# only-memories

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/only_memories/: __init__.py  api.py  config.py  embeddings.py  mcp_server.py  ranking.py  schemas.py  store.py
backend/tests/: context.py  test_api.py  test_store.py
docs/: architecture.md  memory-types.md  source-links.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx  responsive.css  styles.css
frontend/src/components/: Composer.tsx  GraphView.tsx  Inspector.tsx  Maintenance.tsx  MemoryTable.tsx
