[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "only-memories"
version = "0.1.0"
description = "Local-first memory graph service for LLM agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mauri" }]
dependencies = [
  "fastapi>=0.116.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]
mcp = [
  "mcp>=1.2.0"
]

[project.scripts]
only-memories-api = "only_memories.api:run"
only-memories-mcp = "only_memories.mcp_server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["only_memories*"]

[tool.ruff]
line-length = 100
target-version = "py311"
